# streamlit-webrtc

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Aptfile  CHANGELOG.md  CHANGELOG.old.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  app.py  app_coturn.py  app_deepspeech.py  app_multi.py  app_record.py  app_videochat.py  disabled_during_run.py  home.py  mkdocs.yml  mypy.ini  packages.txt  pyproject.toml  release_check.py  requirements.txt  setup.py  streamlit_app.py
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/actions/install-safe-chain/: action.yml
.github/actions/setup-takumi-guard/: action.yml
.github/workflows/: changelog.yml  claude-issue-implement.yml  claude-issue-triage.yml  dependency-review.yml  docker.yml  docs.yml  frontend.yml  main.yml  post-build.yml  publish.yml  python-package.yml  test-build.yml
changelog.d/: 20251123_163959_t.yic.yt_scriv.md  20251126_033241_t.yic.yt.md  20251126_160254_t.yic.yt.md  20251126_170342_t.yic.yt_no_bump_commit.md  20251126_174507_t.yic.yt.md  20251126_175440_t.yic.yt_readme_badges.md  20260429_002008_t.yic.yt_fix_lockfile_ci_20260429.md  20260429_233116_t.yic.yt_ci_python_314.md  20260503_141052_t.yic.yt_migrate_to_scriv_release.md  20260511_134304_t.yic.yt_hide_stop_button_with_desired_playing_state.md  20260511_224155_t.yic.yt.md  20260512_161842_t.yic.yt_chore_fragment_takumi_guard.md  20260512_165053_t.yic.yt_fix_ice_candidate_dedup_per_worker.md  20260513_042424_t.yic.yt_chore_delete_dead_code.md  20260513_042507_t.yic.yt_chore_refactoring_plan.md  20260513_042742_t.yic.yt_chore_agents_mandate_changelog_fragments.md  20260513_043042_t.yic.yt_chore_merge_claude_md_into_agents_md.md  20260513_052152_t.yic.yt_bump_streamlit_min_to_1_51.md  20260513_201413_t.yic.yt_added_persist_device_selection.md  20260515_100330_t.yic.yt_chore_bump_scriv_release.md  20260515_145451_t.yic.yt_chore_burn_0_67_0.md  20260515_191109_t.yic.yt_drop_deprecated_kwargs.md  20260515_223543_t.yic.yt_chore_bump_scriv_release_0_5_0.md  20260515_225319_t.yic.yt_chore_bump_scriv_release_0_5_1.md  20260516_002735_t.yic.yt_chore_bump_scriv_release_0_6_0.md  20260516_011312_t.yic.yt_chore_bump_scriv_release_0_6_2.md  20260516_013236_t.yic.yt_chore_bump_scriv_release_0_6_3.md  20260516_015258_t.yic.yt_chore_bump_scriv_release_0_7_0.md  20260516_163535_t.yic.yt_decouple_worker_from_runtime.md  20260516_170124_t.yic.yt_streamer_context_descriptor.md  20260516_172348_t.yic.yt_pytest_pyramid.md  20260516_221732_t.yic.yt_pytest_pyramid_layer3.md  20260516_224710_t.yic.yt_process_offer_coro.md  20260517_141327_t.yic.yt_webrtc_streamer_body.md  20260517_150252_t.yic.yt_decouple_mix_track.md  20260518_151610_t.yic.yt_devdep_audioop.md  20260518_160122_t.yic.yt_sendrecv_one_sided.md  20260518_162449_t.yic.yt_frontend_build_chunk_size.md  20260518_162836_t.yic.yt_triage_issues_20260518.md  20260519_084441_t.yic.yt_source_track_on_ended_1800.md  (+25 more)
docs/: ai-issue-workflow.md  deployment.md  index.md  tutorial.md
docs/examples/: audio.py  both.py  pyproject.toml  quick_start.py  simple_loopback.py  video.py
docs/examples/deployment/: 05_stun_config.py
docs/examples/tutorial/: 01_basic_usage.py  02_video_processing.py  03_parameters.py  04_pull_values.py  05_cleanup.py
docs/hooks/: remove_trailing_line.py
my_component/: .gitignore  __init__.py  config.py  generate.py  transform.py  webrtc.py
my_component/frontend/: .eslintrc.js  .gitignore  .prettierignore  package-lock.json  package.json
my_component/frontend/src/: MyComponent.tsx  index.tsx
pages/: .isort.cfg  10_sendonly_audio.py  11_programatic_control_playing.py  12_media_constraints_configs.py  13_ui_texts_customization.py  14_programmable_source.py  15_audio_source.py  16_audio_in_video_out.py  17_video_in_video_out_decoupled.py  18_audio_chat_realtime.py  1_object_detection.py  2_opencv_filters.py  3_audio_filter.py  4_delayed_echo.py  5_fork_multi_outputs.py  6_mix_multi_inputs.py  7_record.py  8_media_files_streaming.py  9_sendonly_video.py  audio_filter.py  delayed_echo.py  fork_multi_outputs.py  media_constraints_configs.py  media_files_streaming.py  mix_multi_inputs.py  object_detection.py  opencv_filters.py  programatic_control_playing.py  pyproject.toml  record.py  sendonly_audio.py  sendonly_video.py  ui_texts_customization.py
refactoring/: 01-bump-streamlit-minimum.md  02-delete-dead-code.md  03-fix-ice-candidate-mutable-class-attr.md  04-decouple-worker-from-streamlit-runtime.md  05-add-pytest-layers.md  06-refactor-process-offer-coro.md  07-refactor-webrtc-streamer-function.md  08-cleanup-webrtc-streamer-context.md  README.md
sample_utils/: download.py  turn.py
scripts/: bump-version.sh  get_bump_version_level.py  release_check.py  setup-issue-labels.sh
streamlit_webrtc/: SessionState.py  __init__.py  _compat.py  app.py  component.py  components_callbacks.py  config.py  credentials.py  eventloop.py  factory.py  mix.py  models.py  mux.py  pcm_source.py  process.py  receive.py  relay.py  server.py  session_info.py  shutdown.py  sink.py  source.py  transform.py  types.py  webrtc.py
streamlit_webrtc/coturn/: __init__.py  server.py  turn.py
streamlit_webrtc/frontend/: .eslintrc.js  .gitignore  .npmrc  .prettierignore  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
streamlit_webrtc/frontend/.storybook/: main.js  main.ts  preview.ts
streamlit_webrtc/frontend/public/: index.html
tests/: component_pure_test.py  config_test.py  conftest.py  factory_cache_generation_test.py  factory_lifecycle_scope_test.py  factory_reset_key_test.py  get_or_create_context_test.py  import_test.py  mix_test.py  models_test.py  pcm_source_test.py  process_test.py  session_info_test.py  shutdown_test.py  source_test.py  streamer_context_test.py  webrtc_loopback_test.py  webrtc_shutdown_guard_test.py
(+71 files in other folders)
