[project]
name = "streamlit-webrtc"
description = "Real-time video and audio processing on Streamlit"
authors = [{ name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com" }]
requires-python = ">=3.9,!=3.9.7"  # 3.9.7 is excluded due to https://github.com/streamlit/streamlit/pull/5168
readme = "README.md"
license = "MIT"
dynamic = ["version"]
dependencies = [
    # For allow-same-origin, >=0.73.0 is required. See https://blog.streamlit.io/streamlit-components-security-and-a-five-month-quest-to-ship-a-single-line-of-code/
    # 0.84.0 has an error at marshalling component values.
    # For cache_data or experimental_memo, >=0.89.0 is required. See https://docs.streamlit.io/develop/quick-reference/release-notes/2021#version-0890, https://docs.streamlit.io/develop/quick-reference/release-notes/2023#version-1180
    "streamlit>=0.89.0",
    "aiortc>=1.11.0", # aiortc<1.4.0 causes an error with cryptography>=39.0.0. See https://github.com/whitphx/streamlit-webrtc/issues/1164. The fix was introduced into aiortc in https://github.com/aiortc/aiortc/commit/08b0a7e9f5030a9f7e5617382e92560d4ae763a2 that 1.4.0 included.
    "packaging>=20.0",
    "aioice>=0.9.0",
]

[project.urls]
Repository = "https://github.com/whitphx/streamlit-webrtc"

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "pytest>=7.1.2",
    "mypy[faster-cache]>=1.15.0",
    "bump-my-version>=1.0.2",
    "pre-commit>=4.2.0",
    "pydub>=0.25.1",
    "matplotlib>=3.5.1",
    "streamlit-server-state>=0.17.1",
    "twilio>=8.1",
    "opencv-python-headless>=4.5.4.58",
    "streamlit-session-memo>=0.3.2",
    # For testing older versions of Streamlit: https://discuss.streamlit.io/t/modulenotfounderror-no-module-named-altair-vegalite-v4/42921
    "altair<5",
    # For testing older versions of Streamlit: https://discuss.streamlit.io/t/streamlit-run-with-protobuf-error/25632/3
    "protobuf<=3.20",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["/streamlit_webrtc"]
exclude = ["/streamlit_webrtc/frontend", "!/streamlit_webrtc/frontend/dist"]

[tool.hatch.build.targets.wheel]
include = ["/streamlit_webrtc"]
exclude = ["/streamlit_webrtc/frontend", "!/streamlit_webrtc/frontend/dist"]

[tool.hatch.metadata]
allow-direct-references = true  # To allow aioice to be installed from a git URL.

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
