[project]
name = "streamlit-webrtc"
description = "Real-time video and audio processing on Streamlit"
authors = [{ name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dynamic = ["version"]
dependencies = [
    "streamlit>=1.4.0", # Minimum Streamlit version that supports Python 3.10
    "aiortc>=1.11.0", # aiortc<1.4.0 causes an error with cryptography>=39.0.0. See https://github.com/whitphx/streamlit-webrtc/issues/1164. The fix was introduced into aiortc in https://github.com/aiortc/aiortc/commit/08b0a7e9f5030a9f7e5617382e92560d4ae763a2 that 1.4.0 included.
    "packaging>=20.0",
    "aioice>=0.10.1",
]

[project.urls]
Repository = "https://github.com/whitphx/streamlit-webrtc"

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "pytest>=7.1.2",
    "mypy[faster-cache]>=1.15.0",
    "bump-my-version>=1.0.2",
    "pre-commit>=4.2.0",
    "pydub>=0.25.1",
    "matplotlib>=3.5.1",
    "streamlit-server-state>=0.17.1",
    "twilio>=8.1",
    "opencv-python-headless>=4.5.4.58",
    "streamlit-session-memo>=0.3.2",
    # For testing older versions of Streamlit: https://discuss.streamlit.io/t/modulenotfounderror-no-module-named-altair-vegalite-v4/42921
    "altair<5",
    # For testing older versions of Streamlit: https://discuss.streamlit.io/t/streamlit-run-with-protobuf-error/25632/3
    "protobuf<=3.20",
    "mkdocs-material>=9.6.20",
    "scriv>=1.7.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["/streamlit_webrtc"]
exclude = ["/streamlit_webrtc/frontend", "!/streamlit_webrtc/frontend/dist"]

[tool.hatch.build.targets.wheel]
include = ["/streamlit_webrtc"]
exclude = ["/streamlit_webrtc/frontend", "!/streamlit_webrtc/frontend/dist"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = [
    '^site/',
]

[tool.scriv]
categories = ["Added", "Changed", "Deprecated", "Removed", "Fixed", "Security", "Chore"]
format = "md"
