[project]
name = "streamlit-webrtc"
description = "Real-time video and audio processing on Streamlit"
authors = [{ name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dynamic = ["version"]
dependencies = [
    "streamlit>=1.51.0", # First Streamlit version requiring Python >=3.10 (i.e., the oldest Streamlit that doesn't accept a Python version below ours). Set this floor as Python 3.9 reached EOL on 2025-10-31.
    "aiortc>=1.14.0", # aiortc<1.4.0 causes an error with cryptography>=39.0.0. See https://github.com/whitphx/streamlit-webrtc/issues/1164. The fix was introduced into aiortc in https://github.com/aiortc/aiortc/commit/08b0a7e9f5030a9f7e5617382e92560d4ae763a2 that 1.4.0 included. aiortc<1.14.0 caps av<15, which lacks Python 3.14 wheels.
    "av>=15.1.0", # First version with prebuilt wheels for Python 3.14 (cp314).
    "packaging>=20.0",
    "aioice>=0.10.1",
]

[project.urls]
Repository = "https://github.com/whitphx/streamlit-webrtc"

# Forks carrying trickle ICE support; temporary until the changes land in
# upstream releases. Note these only apply to uv-based workflows, and a PyPI
# release cannot ship git dependencies.
[tool.uv.sources]
aioice = { git = "https://github.com/whitphx/aioice", branch = "dev-trickle-ice" }
aiortc = { git = "https://github.com/whitphx/aiortc", branch = "dev-trickle-ice" }

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "pytest>=7.1.2",
    "mypy[faster-cache]>=1.15.0",
    "bump-my-version>=1.0.2",
    "pre-commit>=4.2.0",
    "pydub>=0.25.1",
    "matplotlib>=3.5.1",
    "streamlit-server-state>=0.17.1",
    "twilio>=8.1",
    "opencv-python-headless>=4.5.4.58",
    "streamlit-session-memo>=0.3.2",
    "mkdocs-material>=9.6.20",
    "scriv>=1.7.0",
    "pytest-asyncio>=1.3.0",
    "audioop-lts==0.2.2; python_version >= '3.13'",
    "openai[realtime]>=1.51.0",  # For pages/18_audio_chat_realtime.py — the [realtime] extra pulls in websockets.
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["/streamlit_webrtc"]
exclude = ["/streamlit_webrtc/frontend", "!/streamlit_webrtc/frontend/dist"]

[tool.hatch.build.targets.wheel]
include = ["/streamlit_webrtc"]
exclude = ["/streamlit_webrtc/frontend", "!/streamlit_webrtc/frontend/dist"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = [
    '^site/',
]

[tool.scriv]
categories = ["Added", "Changed", "Deprecated", "Removed", "Fixed", "Security", "Chore"]
format = "md"
md_header_level = 2

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
